# medusadb

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  justfile
crates/gorgondb/: Cargo.toml  README.md
crates/gorgondb/.cargo/: config.toml
crates/gorgondb/benches/: indexing.rs  perf.rs
crates/gorgondb/src/: async_file.rs  async_file_source.rs  async_permit_read.rs  async_read_failure.rs  async_read_init.rs  async_source.rs  async_source_chain.rs  blob_id.rs  buf_utils.rs  cairn.rs  client.rs  filesystem.rs  fragmentation.rs  gorgon.rs  hash_algorithm.rs  ledger.rs  lib.rs  remote_ref.rs  storage.rs
crates/gorgondb/src/filesystem/: async_file_read.rs  async_file_source.rs  mod.rs
crates/gorgondb/src/fragmentation/: fastcdc.rs
crates/gorgondb/src/indexing/: cache.rs  fixed_size.rs  mod.rs  tree.rs
crates/gorgondb/src/storage/: aws.rs  filesystem.rs  memory.rs  mod.rs
crates/gorgondb/src/storage/aws/: dynamodb.rs  mod.rs  s3.rs
crates/gorgondb/src/storage/cache/: mod.rs
crates/gorgondb/src/transaction/: mod.rs  storage.rs
crates/medusadb/: Cargo.toml  README.md
crates/medusadb/src/: lib.rs
supply-chain/: audits.toml  config.toml
