[workspace]
members = [
    "crates/gorgondb",
    "crates/medusadb",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/medusadb/medusadb.git"
publish = true

[workspace.dependencies]
gorgondb = { version = "0.0.1", path = "crates/gorgondb" }
medusadb = { path = "crates/medusadb" }

anyhow = "1.0.75"
async-compat = "0.2.1"
base64 = "0.21.3"
base85 = "2.0.0"
blake3 = "1.4.1"
byteorder = "1.4.3"
bytes = "1.4.0"
clap = {version = "4.4.0", features = ["derive"]}
fastcdc = {version = "3.1", features = ["futures"]}
futures = "0.3.28"
fs4 = { version = "0.6", features = ["tokio-async"] }
hex = "0.4.3"
rmp-serde = "1.1.2"
pin-project = "1"
reflink = "0.1.3"
serde = "1.0.183"
serde_json = "1.0.105"
serde_with = "3.3.0"
thiserror = "1.0.47"
tokio = {version = "1.32", features = ["full"]}
tokio-stream = "0.1.14"
tracing = "0.1.37"
