[workspace]
members = [
    "crates/gorgondb",
    "crates/medusadb",
]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/medusadb/medusadb.git"
publish = true

[workspace.dependencies]
gorgondb = { path = "crates/gorgondb" }
medusadb = { path = "crates/medusadb" }

anyhow = "1"
async-compat = "0.2.3"
async-trait = "0.1.75"
async-stream = "0.3.5"
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-dynamodb = "1"
base64 = "0.21.3"
base85 = "2"
blake3 = "1"
byteorder = "1"
bytes = "1"
chrono = "0.4.31"
clap = {version = "4", features = ["derive"]}
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
dirs = "5"
fastcdc = {version = "3", features = ["futures"]}
futures = "0.3.28"
fs4 = { version = "0.6", features = ["tokio-async"] }
hex = "0.4.3"
http = "0.2.9"
humansize = {version = "2", features = ["impl_style"]}
lru = "0.12.1"
itertools = "0.11.0"
num-integer = {version = "0.1.45", features = ["default", "i128"]}
rmp-serde = "1"
pin-project = "1"
reflink = "0.1.3"
serde = "1"
serde_bytes = "0.11.12"
serde_json = "1"
serde_with = "3"
tempfile = "3"
thiserror = "1"
tokio = {version = "1", features = ["macros", "fs", "rt", "rt-multi-thread", "sync", "test-util"]}
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
tracing-test = "0.2.4"
