[workspace]
members = [
    "crates/gorgondb",
    "crates/medusadb",
]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/medusadb/medusadb.git"
publish = true

[workspace.dependencies]
gorgondb = { path = "crates/gorgondb" }
medusadb = { path = "crates/medusadb" }

anyhow = "1"
async-compat = "0.2"
async-trait = "0.1"
async-stream = "0.3"
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-dynamodb = "1"
base64 = "0.21.7"
base85 = "2"
blake3 = "1"
byteorder = "1"
bytes = "1"
chrono = "0.4.31"
clap = {version = "4", features = ["derive"]}
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
dirs = "6"
fastcdc = {version = "3", features = ["futures"]}
futures = "0.3.28"
fs4 = { version = "0.13", features = ["tokio"] }
hex = "0.4.3"
http = "1"
humansize = {version = "2", features = ["impl_style"]}
lru = "0.12.5"
itertools = "0.14.0"
num-integer = {version = "0.1.45", features = ["default", "i128"]}
rmp-serde = "1"
pin-project = "1"
reflink = "0.1.3"
serde = {version = "1", features = ["derive"]}
serde_bytes = "0.11.12"
serde_json = "1"
serde_with = "3"
tempfile = "3"
thiserror = "2"
tokio = {version = "1", features = ["macros", "fs", "rt", "rt-multi-thread", "sync", "test-util"]}
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
tracing-test = "0.2.4"

[profile.test]
inherits = "release"
