[package]
name = "gorgondb"
description = "An immutable and distributed blob storage system."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme = "README.md"
categories = ["database"]
keywords = ["blob-storage", "gorgondb", "medusadb", "immutable", "cache"]

[dependencies]
async-compat.workspace = true
base85.workspace = true
blake3.workspace = true
byteorder.workspace = true
bytes.workspace = true
fastcdc.workspace = true
futures.workspace = true
fs4.workspace = true
rmp-serde.workspace = true
pin-project.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
serde_json.workspace = true
