[package]
name = "gorgondb"
description = "An immutable and distributed blob storage system."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme = "README.md"
categories = ["database"]
keywords = ["blob-storage", "gorgondb", "medusadb", "immutable", "cache"]

[lib]
name = "gorgondb"
path = "src/lib.rs"

[[bin]]
name = "gorgoncli"
path = "src/bin/cli.rs"

[features]
default = ["cli"]
cli = ["dep:anyhow", "dep:clap"]

[dependencies]
anyhow = { workspace = true, optional = true }
async-compat.workspace = true
async-trait.workspace = true
base85.workspace = true
blake3.workspace = true
byteorder.workspace = true
bytes.workspace = true
clap = { workspace = true, optional = true }
fastcdc.workspace = true
futures.workspace = true
fs4.workspace = true
hex.workspace = true
reflink.workspace = true
rmp-serde.workspace = true
pin-project.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
