[package]
name = "gorgondb"
description = "An immutable and distributed blob storage system."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme = "README.md"
categories = ["database"]
keywords = ["blob-storage", "gorgondb", "medusadb", "immutable", "cache"]

[lib]
name = "gorgondb"
path = "src/lib.rs"

[[bin]]
name = "gorgoncli"
path = "src/bin/cli.rs"

[features]
default = ["aws", "cli"]
aws = ["dep:aws-sdk-s3", "dep:aws-sdk-dynamodb"]
cli = ["dep:anyhow", "dep:clap"]

[dependencies]
anyhow = { workspace = true, optional = true }
async-compat.workspace = true
aws-config.workspace = true
aws-sdk-s3 = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
base64.workspace = true
blake3.workspace = true
byteorder.workspace = true
bytes.workspace = true
clap = { workspace = true, optional = true }
fastcdc.workspace = true
futures.workspace = true
fs4.workspace = true
hex.workspace = true
http.workspace = true
num-integer.workspace = true
reflink.workspace = true
rmp-serde.workspace = true
pin-project.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
