[package]
name = "medusadb"
description = "A highly efficient, extremely scalable, distributed database"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme = "README.md"
categories = ["database"]
keywords = ["blob-storage", "gorgondb", "medusadb", "immutable", "cache"]

[dependencies]
#gorgondb.workspace = true
